Fix/2817 [tag-list] fix flickering of elements inside when zooming

--- a/packages/components/combobox/src/combobox.scss
+++ b/packages/components/combobox/src/combobox.scss
@@ -46,7 +46,7 @@ sl-text-field {
 }
 
 sl-tag-list {
-  flex: 0 1 auto;
+  flex: 1 1 auto;
   max-inline-size: 66%;
   min-inline-size: 0;
   position: relative;
